k8snamespace/new-mbti-fronend-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mbti-frontend-ing
  namespace: frontend              # 👈 여기 추가!
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mbti-frontend
                port:
                  number: 80
